# libpackage

./: CHANGELOG.md  CMakeLists.txt  NOTICE  README.md
.github/workflows/: cmake-single-platform.yml  gtest.yml
app/: CMakeLists.txt  PackageImplTestApp.cpp
inc/: LibPackage.h
include/: Archives.h  Config.h  DataStorage.h  Debug.h  Executor.h  File.h  Filesystem.h  IPackageImpl.h  LibPackage.h  PackageImpl.h  RFileSystem.h  RalfExecutor.h  RalfPackageImpl.h  SqlDataStorage.h
include/ralf/: RalfPackageImpl.h
src/: Archives.cpp  CMakeLists.txt  Config.cpp  Executor.cpp  Filesystem.cpp  LibPackage.cpp  LibPackage.h  PackageImpl.cpp  RFileSystem.cpp  RalfExecutor.cpp  RalfPackageHandler.cpp  SqlDataStorage.cpp
src/legacy/: Archives.cpp  CMakeLists.txt  Config.cpp  File.cpp  SqlDataStorage.cpp
src/ralf/: CMakeLists.txt  LoopMount.cpp  RalfPackageHandler.cpp
tests/: CMakeLists.txt  PackageImplTest.cpp
